--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "console-ui": "^3.0.0",
     "copy-dir": "^0.4.0",
     "cordova-common": "^3.2.0",
-    "cordova-lib": "10.0.0",
+    "cordova-lib": "https://github.com/apache/cordova-lib#7f8b2d011dc05749cf6075fe483b5e1bb08f1a07",
     "core-object": "^3.1.3",
     "ember-cli": "^3.7.1",
     "ember-cli-babel": "^7.1.0",
